Potential fix for fullscreen on iOS. Potential fix for leaderboard text bug

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -23,3 +23,13 @@
   input {
     text-align: center;
   }
+
+  /* Simulated fullscreen for iOS */
+#game-container.fullscreen-mobile {
+    position: fixed !important;
+    top: 0 !important;
+    left: 0 !important;
+    width: 100vw !important;
+    height: 100vh !important;
+    z-index: 9999 !important;
+}
